# nhom12

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: bulldozer_model.ipynb
ui/: main.py
ui/templates/: index.html  result.html
